--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta property="og:title" content="Средство №1 от боли в суставах!" />
+	<meta property="og:title" content="Alpha pants - для работы, путешествий и повседневной жизни" />
 	<meta property="og:description"
-		content="Fortuflex2 - это эффективные пластыри для борьбы с болями и воспалением в суставах и на любом участке тела." />
-	<meta property="og:image" content="https://i.imgur.com/sFuma6m.png" />
+		content="Брюки из ткани рип-стоп идеально подходит для любителей активного образа жизни, а также для каждодневной носки." />
+	<meta property="og:image"
+		content="https://raw.githubusercontent.com/Pavel-Bashkeev/offers-720/main/app/images/src/products/item-1.png" />
 	<meta property="og:type" content="website" />
 
 	<link rel="shortcut icon" href="./images/dest/favicon.svg" type="image/svg+xml">
@@ -384,7 +385,7 @@
 					</li>
 					<li class="specifications__descr-item df al-c">
 						<span class="specifications__descr-text--accent db">
-							Модель: 
+							Модель:
 						</span>
 						<span class="specifications__descr-text db">
 							прямые
@@ -435,7 +436,9 @@
 									</div>
 								</div>
 								<p class="slide__text">
-									Заказал две пары. Очень доволен. Отличное качество пошива, хорошая ткань, размер подошел отлично, как на меня шили. Все бы так работали. Ношу около двух месяцев практически каждый день. Никаких минусов не нашел.
+									Заказал две пары. Очень доволен. Отличное качество пошива, хорошая ткань, размер подошел отлично, как
+									на меня шили. Все бы так работали. Ношу около двух месяцев практически каждый день. Никаких минусов не
+									нашел.
 								</p>
 								<div class="slide__box df al-c">
 									<img src="./images/dest/slidesReviews/1/item-2.jpg" alt="" class="slide__box-img db">
@@ -462,7 +465,8 @@
 									</div>
 								</div>
 								<p class="slide__text">
-									Отличные штаны. Сшиты качественно, строчки ровные - глаз радуется. Удобные. Тест в походе прошли на ура.Покупкой доволен, буду рекомендовать знакомым 100% и штаны и магазин.
+									Отличные штаны. Сшиты качественно, строчки ровные - глаз радуется. Удобные. Тест в походе прошли на
+									ура.Покупкой доволен, буду рекомендовать знакомым 100% и штаны и магазин.
 
 								</p>
 								<div class="slide__box df al-c">
@@ -489,7 +493,9 @@
 									</div>
 								</div>
 								<p class="slide__text">
-									Я заказал брюки как альтернативу для работы, но теперь ношу только их. Очень удобно, что много карманов, ткань очень прочная! Доставка очень быстрая и очень удобно, что оплачиваете при получении. На работе, коллеги спрашивают где я купил такие штаны, я всем советую вас!
+									Я заказал брюки как альтернативу для работы, но теперь ношу только их. Очень удобно, что много
+									карманов, ткань очень прочная! Доставка очень быстрая и очень удобно, что оплачиваете при получении.
+									На работе, коллеги спрашивают где я купил такие штаны, я всем советую вас!
 								</p>
 								<div class="slide__box df al-c">
 									<img src="./images/dest/slidesReviews/3/item-1.jpg" alt="" class="slide__box-img db">
@@ -502,100 +508,183 @@
 				<div class="swiper-pagination"></div>
 			</div>
 		</section>
-		<!-- 
-			<div class="timer__clock">
-						<div class="countdown-second">
-							<div class="bloc-time hours" data-init-value="0">
-								<div class="figure hours hours-1">
-									<span class="top">0</span>
-									<span class="top-back">
-										<span>0</span>
-									</span>
-									<span class="bottom">0</span>
-									<span class="bottom-back">
-										<span>0</span>
-									</span>
-								</div>
+		<div class="order-steps">
+			<h3 class="order-steps__title tac">
+				Как заказать
+			</h3>
+			<p class="logo order-steps__logo">
+				Alpha pants
+			</p>
+			<div class="order-steps__items">
+				<div class="order-steps__item">
+					<div class="order-steps__top df al-c">
+						<div class="order-steps__box">
+							<img src="./images/dest/orderSteps/item-1.png" alt="" class="order-steps__icon">
+						</div>
+						<h5 class="order-steps__item-title">Шаг 1</h5>
+					</div>
+					<p class="order-steps__text">
+						Заполните форму на сайте и ожидайте звонка от оператора
+					</p>
+				</div>
+				<div class="order-steps__item">
+					<div class="order-steps__top df al-c">
+						<div class="order-steps__box">
+							<img src="./images/dest/orderSteps/item-2.png" alt="" class="order-steps__icon">
+						</div>
+						<h5 class="order-steps__item-title">Шаг 2</h5>
+					</div>
+					<p class="order-steps__text">
+						Курьерская доставка в течение 1-7 дней
+					</p>
+				</div>
+				<div class="order-steps__item">
+					<div class="order-steps__top df al-c">
+						<div class="order-steps__box">
+							<img src="./images/dest/orderSteps/item-3.png" alt="" class="order-steps__icon">
+						</div>
+						<h5 class="order-steps__item-title">Шаг 3</h5>
+					</div>
+					<p class="order-steps__text">
+						Оплата при получении или по предоплате
+					</p>
+				</div>
+			</div>
+		</div>
+		<section class="hero-before-footer hero">
+			<h1 class="hero__title tac logo">
+				Alpha pants
+			</h1>
+			<p class="hero__subtitle tac">
+				Брюки повышенной прочности
+			</p>
+			<p class="hero__text--accent mr-a tac">
+				Для работы, путешествий и повседневной жизни
+			</p>
+			<div class="hero-box">
+				<p class="hero-box__text tac">
+					Выбор цвета:
+				</p>
+				<div class="hero-box__btns df al-c ju-b">
+					<button class="btn-reset hero-box__btn hero-box__btn--green active" data-choice="item-1"></button>
+					<button class="btn-reset hero-box__btn hero-box__btn--beige" data-choice="item-2"></button>
+					<button class="btn-reset hero-box__btn hero-box__btn--black" data-choice="item-3"></button>
+				</div>
+			</div>
+			<div class="hero-choose pos-rel">
+				<div class="hero-choose__box pos-ab">
+					<img src="./images/dest/products/item-1.png" alt="" class="hero-choose__product db">
+				</div>
+				<p class="hero-choose__discount">Скидка - 50%</p>
+				<div class="hero-choose__prices">
+					<div class="hero-choose__price tac">
+						<p class="hero-choose__price-text">Цена сегодня:</p>
+						<p class="hero-choose__price-count--current">49€</p>
+					</div>
+					<div class="hero-choose__price tac">
+						<p class="hero-choose__price-text">Старая цена:</p>
+						<p class="hero-choose__price-count--old">98€</p>
+					</div>
+				</div>
+			</div>
+			<div class="hero-action">
+				<p class="hero-action__text tac">
+					До конца акции осталось:
+				</p>
 
-								<div class="figure hours hours-2">
-									<span class="top">0</span>
-									<span class="top-back">
-										<span>0</span>
-									</span>
-									<span class="bottom">0</span>
-									<span class="bottom-back">
-										<span>0</span>
-									</span>
-								</div>
-							</div>
-							<span class="timer__delimeter">:</span>
-							<div class="bloc-time min" data-init-value="15">
-								<div class="figure min min-1">
-									<span class="top">1</span>
-									<span class="top-back">
-										<span>1</span>
-									</span>
-									<span class="bottom">1</span>
-									<span class="bottom-back">
-										<span>1</span>
-									</span>
-								</div>
+				<div class="countdown-second timer__clock">
+					<div class="bloc-time hours" data-init-value="0">
+						<div class="figure hours hours-1">
+							<span class="top">0</span>
+							<span class="top-back">
+								<span>0</span>
+							</span>
+							<span class="bottom">0</span>
+							<span class="bottom-back">
+								<span>0</span>
+							</span>
+						</div>
 
-								<div class="figure min min-2">
-									<span class="top">5</span>
-									<span class="top-back">
-										<span>5</span>
-									</span>
-									<span class="bottom">5</span>
-									<span class="bottom-back">
-										<span>5</span>
-									</span>
-								</div>
-							</div>
-							<span class="timer__delimeter">:</span>
-							<div class="bloc-time sec" data-init-value="0">
-								<div class="figure sec sec-1">
-									<span class="top">0</span>
-									<span class="top-back">
-										<span>0</span>
-									</span>
-									<span class="bottom">0</span>
-									<span class="bottom-back">
-										<span>0</span>
-									</span>
-								</div>
-
-								<div class="figure sec sec-2">
-									<span class="top">0</span>
-									<span class="top-back">
-										<span>0</span>
-									</span>
-									<span class="bottom">0</span>
-									<span class="bottom-back">
-										<span>0</span>
-									</span>
-								</div>
-							</div>
+						<div class="figure hours hours-2">
+							<span class="top">0</span>
+							<span class="top-back">
+								<span>0</span>
+							</span>
+							<span class="bottom">0</span>
+							<span class="bottom-back">
+								<span>0</span>
+							</span>
 						</div>
 					</div>
-			<div class="form-inner">
-				<form method="POST" class="form" id="form-footer">
-					<label class="form-box">
-						<select class="form-select tac countSelector" name="comment" id="count">
-							<option class="form-select__option" value="1уп.-39€">1 уп. - 39 €</option>
-							<option class="form-select__option" value="2+1уп.-78€">2+1 уп. - 78 €</option>
-							<option class="form-select__option" value="3+2 уп.-117€">3+2 уп. - 117 €</option>
-							<option class="form-select__option" value="6+4 уп.-234€">6+4 уп. - 234 €</option>
-						</select>
-					</label>
-					<input class="form__input" type="text" name='name' placeholder="Имя" required=''>
-					<input class="form__input" type="tel" name="phone" id="phone" placeholder="Телефон" required=''>
-					<button class="button btn-reset form__btn" type="submit">КУПИТЬ</button>
-				</form>
-				<p class="order-discount tac">
-					По акции осталось<span class="order-discount--accent">25 уп</span>
-				</p>
+					<span class="timer__delimeter">:</span>
+					<div class="bloc-time min" data-init-value="15">
+						<div class="figure min min-1">
+							<span class="top">1</span>
+							<span class="top-back">
+								<span>1</span>
+							</span>
+							<span class="bottom">1</span>
+							<span class="bottom-back">
+								<span>1</span>
+							</span>
+						</div>
+
+						<div class="figure min min-2">
+							<span class="top">5</span>
+							<span class="top-back">
+								<span>5</span>
+							</span>
+							<span class="bottom">5</span>
+							<span class="bottom-back">
+								<span>5</span>
+							</span>
+						</div>
+					</div>
+					<span class="timer__delimeter">:</span>
+					<div class="bloc-time sec" data-init-value="0">
+						<div class="figure sec sec-1">
+							<span class="top">0</span>
+							<span class="top-back">
+								<span>0</span>
+							</span>
+							<span class="bottom">0</span>
+							<span class="bottom-back">
+								<span>0</span>
+							</span>
+						</div>
+
+						<div class="figure sec sec-2">
+							<span class="top">0</span>
+							<span class="top-back">
+								<span>0</span>
+							</span>
+							<span class="bottom">0</span>
+							<span class="bottom-back">
+								<span>0</span>
+							</span>
+						</div>
+					</div>
+				</div>
+				<div class="form-inner">
+					<form method="POST" class="form" id="form-footer">
+						<label class="form-box">
+							<select class="form-select tac countSelector" name="comment" id="count">
+								<option class="form-select__option" value="1шт.59€">1 шт 59 €</option>
+								<option class="form-select__option" value="1+1.110€">1+1 110 €</option>
+								<option class="form-select__option" value="2+1.150€">2+1 150 €</option>
+							</select>
+						</label>
+						<input class="form__input" type="text" name="name" placeholder="Ваше имя" required="">
+						<input class="form__input" type="tel" name="phone" id="phone" placeholder="Номер телефона" required="">
+						<button class="button btn-reset form__btn link  mr-a db" type="submit">
+							<p class="form__btn-text ttu tac mr-a">
+								ЗАКАЗАТЬ
+							</p>
+						</button>
+					</form>
+				</div>
 			</div>
+		</section>
 		<footer class="footer">
 			<div class="container tac">
 				<p class="footer-comp footer-text">COMPANY</p>
@@ -607,13 +696,14 @@
 					</script> All rights reserved.
 				</p>
 
-				<img class="footer-card" src="./images/dest/icons.png" style="width: auto; max-width:100%; height:auto; margin: auto">
-				
+				<img class="footer-card" src="./images/dest/icons.png"
+					style="width: auto; max-width:100%; height:auto; margin: auto">
+
 				<a class="db footer-link" href="/privacypolicy" target="_blank">Privacy policy</a>
 				<a class="db footer-link" href="/general-conditions-of-sale" target="_blank">General conditions of sale</a>
 				<a class="db footer-link" href="/legal-warning" target="_blank">Legal warning</a>
 			</div>
-		</footer> -->
+		</footer>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 	<script src="./js/swiper.min.js"></script>
